--- a/index.html
+++ b/index.html
@@ -149,6 +149,12 @@
             </a>
           </li>
 
+          <li class="social-item">
+            <a href="https://wa.link/8qzryk" class="social-link">
+              <ion-icon name="logo-whatsapp"></ion-icon>
+            </a>
+          </li>
+
         </ul>
 
       </div>
@@ -192,7 +198,7 @@
           </li> -->
 
           <li class="navbar-item">
-            <button class="navbar-link" data-nav-link>Contact</button>
+            <button class="navbar-link" data-nav-link>Contactame</button>
           </li>
         </ul>
 
@@ -860,7 +866,7 @@
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
-                  <img src="./assets/images/ATS_juridicas.png" alt="CF_inicio" loading="lazy">
+                  <img src="./assets/images/pro_tech.png" alt="pro_tech" loading="lazy">
                 </figure>
                 <h3 class="project-title">Pro-Tech</h3>
                 <p class="project-category">Aplicacion</p>
@@ -874,7 +880,7 @@
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
-                  <img src="./assets/images/ATS_juridicas.png" alt="CF_inicio" loading="lazy">
+                  <img src="./assets/images/ATS_juridicas.png" alt="ATS_juridicas" loading="lazy">
                 </figure>
                 <h3 class="project-title">ATS Juridicas</h3>
                 <p class="project-category">Pagina Web</p>
@@ -1088,37 +1094,38 @@
         - #CONTACT
       -->
 
-      <article class="contact" data-page="contact">
+      <article class="contact" data-page="contactame">
 
         <header>
-          <h2 class="h2 article-title">Contact</h2>
+          <h2 class="h2 article-title">Contactame</h2>
         </header>
 
         <section class="mapbox" data-mapbox>
           <figure>
             <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d199666.5651251294!2d-121.58334177520186!3d38.56165006739519!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x809ac672b28397f9%3A0x921f6aaa74197fdb!2sSacramento%2C%20CA%2C%20USA!5e0!3m2!1sen!2sbd!4v1647608789441!5m2!1sen!2sbd"
-              width="400" height="300" loading="lazy"></iframe>
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d126916.69980780348!2d-75.6636142429322!3d6.244367697003173!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e4428dfb80fad05%3A0x42137cfcc7b53b56!2sMedell%C3%ADn%2C%20Antioquia!5e0!3m2!1ses-419!2sco!4v1719280252042!5m2!1ses-419!2sco"
+              width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"></iframe>
           </figure>
         </section>
 
         <section class="contact-form">
 
-          <h3 class="h3 form-title">Contact Form</h3>
+          <h3 class="h3 form-title">Formulario de Contacto</h3>
 
-          <form action="#" class="form" data-form>
+          <form action="form.php" method="POST">
 
             <div class="input-wrapper">
-              <input type="text" name="fullname" class="form-input" placeholder="Full name" required data-form-input>
+              <input type="text" name="fullname" id="fullname" class="form-input" placeholder="Nombre Completo" required data-form-input> 
 
-              <input type="email" name="email" class="form-input" placeholder="Email address" required data-form-input>
+              <input type="email" name="email" id="email" class="form-input" placeholder="Correo Electronico" required data-form-input>
             </div>
 
-            <textarea name="message" class="form-input" placeholder="Your Message" required data-form-input></textarea>
+            <textarea name="message" id="message" class="form-input" placeholder="Tu Mensaje" required data-form-input></textarea>
 
-            <button class="form-btn" type="submit" disabled data-form-btn>
+            <button class="form-btn" type="submit" name="submit">
               <ion-icon name="paper-plane"></ion-icon>
-              <span>Send Message</span>
+              <span>Enviar Mensaje</span>
             </button>
 
           </form>
