Se mejora la ortografia del sitio web

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             </a>
 
             <div class="contact-info">
-              <p class="contact-title">Ubicacion</p>
+              <p class="contact-title">UBICACIÓN</p>
               <address>Medellín, Colombia</address>
             </div>
 
@@ -197,9 +197,9 @@
             <button class="navbar-link" data-nav-link>Blog</button>
           </li> -->
 
-          <li class="navbar-item">
+          <!-- <li class="navbar-item">
             <button class="navbar-link" data-nav-link>Contactame</button>
-          </li>
+          </li> -->
         </ul>
 
       </nav>
@@ -239,7 +239,7 @@
 
         <section class="service">
 
-          <h3 class="h3 service-title">¿Que hago?</h3>
+          <h3 class="h3 service-title">Qué hago?</h3>
 
           <ul class="service-list">
 
@@ -254,7 +254,7 @@
                 <h4 class="h4 service-item-title">Diseño Web</h4>
 
                 <p class="service-item-text">
-                  El diseño más moderno y de mayor calidad realizado a nivel profesional.
+                  El diseño más moderno y de mayor calidad realizados a nivel profesional.
                 </p>
               </div>
 
@@ -321,7 +321,7 @@
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
                     Trabajar con Santiago, fue increíble. Creó una tienda online que superó nuestras expectativas. El
-                    diseño es impresionante y la funcionalidad es perfecta. El fue muy profesional y siempre estuvo
+                    diseño es impresionante y la funcionalidad es perfecta. Él fue muy profesional y siempre estuvo
                     disponible para ayudarnos. Gracias a Santiago, nuestras ventas en línea han aumentado
                     significativamente. ¡Muy recomendado!
                   </p>
@@ -341,9 +341,9 @@
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
-                    Santiago, desarrolló nuestra página web para mostrar nuestros servicios y sedes de capillas
+                    Santiago desarrolló nuestra página web para mostrar nuestros servicios y sedes de capillas
                     funerarias. El
-                    resultado fue excelente: un diseño elegante y fácil de navegar. El fue profesional y atento
+                    resultado fue excelente: un diseño elegante y fácil de navegar. Él fue profesional y atento
                     en todo momento. ¡Muy recomendado!
                   </p>
                 </div>
@@ -362,8 +362,8 @@
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
-                    Santiago, hizo un trabajo excepcional al crear nuestra página web para nuestra Firma de abogados.
-                    Gracias a su experiencia, ahora estamos más visibles en internet. El fue diligente en mostrar
+                    Santiago hizo un trabajo excepcional al crear nuestra página web para nuestra Firma de abogados.
+                    Gracias a su experiencia, ahora estamos más visibles en internet. Él fue diligente en mostrar
                     nuestros servicios de manera clara y profesional. ¡Estamos muy agradecidos y felices con los
                     resultados!
                   </p>
@@ -385,7 +385,7 @@
                   <p>
                     Santiago, creó una página web impresionante para nuestro estudio de fotografía. Ahora podemos
                     mostrar fácilmente nuestros servicios y las hermosas fotos que hemos tomado en bodas, cumpleaños,
-                    eventos empresariales y para marcas. El capturó perfectamente la esencia de nuestro trabajo y
+                    eventos empresariales y para marcas. Él capturó perfectamente la esencia de nuestro trabajo y
                     nos ayudó a destacar en línea. ¡Estamos encantados con el resultado!
                   </p>
                 </div>
@@ -543,13 +543,13 @@
               <ion-icon name="book-outline"></ion-icon>
             </div>
 
-            <h3 class="h3">Educacion</h3>
+            <h3 class="h3">Educación</h3>
           </div>
 
           <ol class="timeline-list">
 
             <li class="timeline-item">
-              <h4 class="h4 timeline-item-title">Ingeneria Informatica</h4>
+              <h4 class="h4 timeline-item-title">Ingeniería Informática</h4>
               <span>2020 - 2025</span>
               <p class="timeline-text">
                 Politécnico Colombiano Jaime Isaza Cadavid, Medellín
@@ -557,7 +557,7 @@
             </li>
 
             <li class="timeline-item">
-              <h4 class="h4 timeline-item-title">Tecnologia en Sistematizacion de Datos</h4>
+              <h4 class="h4 timeline-item-title">Tecnología En Sistematización De Datos</h4>
               <span>2022 — 2024</span>
               <p class="timeline-text">
                 Politécnico Colombiano Jaime Isaza Cadavid, Medellín
@@ -565,7 +565,7 @@
             </li>
 
             <li class="timeline-item">
-              <h4 class="h4 timeline-item-title">Tecnica Profesional en Programación de Sistemas de Información</h4>
+              <h4 class="h4 timeline-item-title">Técnica Profesional en Programación de Sistemas de Información</h4>
               <span>2020 - 2022</span>
               <p class="timeline-text">
                 Politécnico Colombiano Jaime Isaza Cadavid, Medellín
@@ -771,7 +771,7 @@
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn>Paginas Web</button>
+              <button data-filter-btn>Páginas Web</button>
             </li>
 
             <li class="filter-item">
@@ -803,7 +803,7 @@
               </li>
 
               <li class="select-item">
-                <button data-select-item>Paginas Web</button>
+                <button data-select-item>Páginas Web</button>
               </li>
 
               <li class="select-item">
@@ -829,7 +829,7 @@
                   <img src="./assets/images/MB_ecommerce.png" alt="MB_ecommerce" loading="lazy">
                 </figure>
                 <h3 class="project-title">Mordazas Brillantes</h3>
-                <p class="project-category">Pagina Web</p>
+                <p class="project-category">Página Web</p>
               </a>
             </li>
 
@@ -856,7 +856,7 @@
                   <img src="./assets/images/CF_inicio.png" alt="CF_inicio" loading="lazy">
                 </figure>
                 <h3 class="project-title">Capillas Funerarias</h3>
-                <p class="project-category">Pagina Web</p>
+                <p class="project-category">Páginas Web</p>
               </a>
             </li>
 
@@ -883,7 +883,7 @@
                   <img src="./assets/images/ATS_juridicas.png" alt="ATS_juridicas" loading="lazy">
                 </figure>
                 <h3 class="project-title">ATS Juridicas</h3>
-                <p class="project-category">Pagina Web</p>
+                <p class="project-category">Páginas Web</p>
               </a>
             </li>
 
@@ -1094,7 +1094,7 @@
         - #CONTACT
       -->
 
-      <article class="contact" data-page="contactame">
+      <!-- <article class="contact" data-page="contactame">
 
         <header>
           <h2 class="h2 article-title">Contactame</h2>
@@ -1132,7 +1132,7 @@
 
         </section>
 
-      </article>
+      </article> -->
 
     </div>
 
